# physicar-deepracer-for-cloud

./: .project  01_start_training.ipynb  02_your_models.ipynb  03_start_test.ipynb  README.md  README_ko.md  pwd  pwd.pub  pyproject.toml  reward_function.py  setup.ipynb  tracks.md
.devcontainer/: devcontainer.json
.devcontainer/.physicar-deepracer-for-cloud/: config.locked.yml  entrypoint.codespaces.sh  entrypoint.ec2.sh  entrypoint.sh  setup.codespaces.sh  setup.ec2.sh  setup.sh  setup_minio_anonymous.py
.devcontainer/.physicar-deepracer-for-cloud/deepracer-for-cloud/scripts/upload/: upload-car.sh
.devcontainer/.physicar-deepracer-for-cloud/params_logs/: HB-continuous.pkl  HB-discrete.pkl  OA-continuous.pkl  OA-discrete.pkl  TT-continuous.pkl  TT-discrete.pkl
.devcontainer/.physicar-deepracer-for-cloud/tracks/: tracks_description_trans.yaml
src/main/java/com/huhan/: App.java
src/test/java/com/huhan/: AppTest.java
