[project]
name = "physicar-deepracer-for-cloud"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.33",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "physicar>=0.1.5",
    "pillow>=11.3.0",
    "polib>=1.2.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
]
